Fix content layout on mobile screen

--- a/app/layout.scss
+++ b/app/layout.scss
@@ -11,28 +11,26 @@
   @include outer-container;
 
   .column {
-    &.full-col {
-      @include span-columns(12);
-    }
+    @media screen and (min-width: $mobile) {
+      &.full-col {
+        @include span-columns(12);
+      }
 
-    &.half-col {
-      @include span-columns(6);
-    }
+      &.half-col {
+        @include span-columns(6);
+      }
 
-    &.three-quarters-col {
-      @include span-columns(9);
-    }
+      &.three-quarters-col {
+        @include span-columns(9);
+      }
 
-    &.one-quarter-col {
-      @include span-columns(3);
+      &.one-quarter-col {
+        @include span-columns(3);
+      }
     }
 
     &.break {
       @include omega();
-    }
-
-    @include media($mobile-grid) {
-      @include span-columns(4);
     }
   }
 }
